add meta viewport

--- a/ssl.html
+++ b/ssl.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>secureConnectionStart test</title>
 	<style>
 	mark.good{background-color: rgba(0,200,0,0.5);}
